Clang: Also rename destructors when renaming class

Summary:
BUG: 373452
FIXED-IN: 5.0.4

Subscribers: kdevelop-devel

Differential Revision: https://phabricator.kde.org/D4098